# whisper_to_vtt

./: README.md  pyproject.toml
transcribe/: transcribe.py
