[tool.poetry]
name = "whisper-experiments"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"
packages = [{include = "whisper_experiments"}]

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
tqdm = "^4.65.0"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
